# Cyber-Retrieval

./: Cargo.toml  README.md  cyber_retrieval_envelope.rs
aln/: asset.chat.stake.v1.aln  governance.chat.website.v1.aln  neurothermo.corridor.state.v1.aln  rollback.sovereignty.v1.aln
biophysical-boundary/src/: lib.rs
crates/aln-invariants/src/: lib.rs
crates/bci-guards-kani/src/: check_evolution_window_safety.rs
crates/bioscale-corridor-macros/src/: lib.rs
crates/bioscale-evolution-cli/src/: main.rs
crates/bioscale-fairness-core/src/: lib.rs
crates/bioscale-fairness-core/tests/: kani_fairness_window.rs
crates/bioscale-fairness-validator/src/: main.rs
crates/bioscale-manifest-emit/src/: lib.rs
crates/bioscale-metrics-manifest/src/: lib.rs
crates/bioscale-upgrade-macros/src/: lib.rs
crates/bioscale-upgrade-store/src/: evidence.rs
crates/corridor-guards/src/: ingestion_env_gate.rs  session_guard.rs
crates/cyber-metrics-core/src/: lib.rs
crates/cyber-retrieval-types/src/: prompt_envelope.rs
crates/cyber_retrieval_actions/src/: factcheck_multi_source.rs
crates/cyber_retrieval_cookbook_academic/src/: envelope.rs  intent.rs  ksrs.rs  lib.rs  quiz_math.rs  rope.rs
crates/cybernano-compliance/src/: config.rs  guard.rs
crates/cybernano-model/src/: nanoswarm.rs
crates/cybernano-shard-schema/src/: lib.rs
crates/cyberretrieval-governance/src/: governance_shard.rs  prompt.rs  router.rs
crates/cyberretrieval-website-governance/: Cargo.toml  build.rs
crates/cyberretrieval-website-governance/src/: lib.rs
crates/cyberswarm-neurostack/src/: bci_guard.rs  evolution_audit.rs
crates/cyconetics-decision-grammar/: Cargo.toml
crates/cyconetics-decision-grammar/src/: lib.rs
crates/donutloop-ledger/src/: entry.rs
crates/eeg-constitutional-codex/src/: governance.rs  invariants.rs  lib.rs  realization.rs
crates/eeg-math-invariants/src/: lib.rs
crates/eibon-sovereign-continuity/src/: lib.rs
crates/governance-core/: STATE-METRICS.md
crates/governance-core/src/: eligibility.rs  policy.rs
crates/nanoswarm-compliance-field/src/: lib.rs
crates/phoenix-mar-env-cookbook/: Cargo.toml
crates/phoenix-mar-env-cookbook/src/: aln_env.rs  env_guard.rs  lib.rs  nexus_ext.rs  roh.rs
crates/retrieval-core/src/: lib.js
crates/sessionguard-proxy/: Cargo.toml  sessionguard-proxy.toml
crates/sessionguard-proxy/src/: config.rs  main.rs  session.rs
crates/sovereigntycore/src/: donutloop.rs
cybercore-brain/src/neuro/: neurothermo_corridor.rs
docs/: Architecting Safety and Quality in AI Chat_ A Neurorights-Governed Framework for Quantified Retrieval and Traceable Research.md  From Ad-Hoc Search to Governed Research_ A Neurorights-Bound Framework for Augmented-Citizen Data Retrieval.md  constitution-core-and-webpage-autonomy-with-CHAT.md
evolution/: research_manifest.aln
evolution/src/: envelope_kernel.rs
governance-core/src/: eligibility.rs  policy.rs  roles.rs
governance-firewall/src/: audit.rs  router.rs
host/corridor/src/: apply_upgrade.rs
logs/: donutloop.highriskresearch.v1.aln
neurorights_rag/: agentic_search_kernel.js
pecs/: off_world_jurisdiction.artemis_accords.v1.aln
research/: ${DATE}-manifest.json  research_goals.neuromorph-eco-aura.aln
rust/crates/aln-compliance/src/: lib.rs
rust/crates/bioscale-upgrade-macros/src/: lib.rs
rust/crates/invariants/src/: lib.rs
specs/: augmented.citizen.rights.kernel.v1.aln  space_duty_mode_profile.v1.aln
specs/aln/: nanoswarm.lifeforce.envelope.v1.aln  nanoswarm.neurothermo.corridor.v1.aln
src/: handlers.rs  risk.rs  roles.rs
src/retrieval/: NeuralRopeConfigPresets.ts  NeuralRopeRetrievalKernel.ts
src/web/: Cyber-Retrieval_Interface.html
tools/audit-verify/src/: main.rs
