[workspace]
members = [
    "crates/neurorights-core",
    "crates/neurorights-macros",
    "crates/neurorights-firewall",
    "crates/organic_cpu_math",
    "crates/organic_cpu_sim",
    "crates/sessionguard-proxy",
]

[workspace.package]
edition = "2021"

# Workspace-level profiles (apply to all members)
[workspace.profile.release]
lto = true
opt-level = "z"
codegen-units = 1
panic = "abort"

[workspace.profile.dev]
opt-level = 0

# Package section for the sessionguard-proxy crate itself.
# This goes in crates/sessionguard-proxy/Cargo.toml.
#
# If you want everything in a single file, move this block
# into crates/sessionguard-proxy/Cargo.toml and keep only
# the [workspace] + [workspace.*] sections above in the root.

[package]
name = "sessionguard-proxy"
version = "0.1.0"
edition = "2021"
description = "Neurorights-governed SessionGuard HTTP proxy for AI-chat backends (Windows-friendly)"
license = "MIT OR Apache-2.0"
authors = ["bostrom18sd2ujv24ual9c9pshtxys6j8knh6xaead9ye7"]
readme = "README.md"
repository = ""

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
http = "0.2"
thiserror = "1"
time = { version = "0.3", features = ["formatting", "parsing"] }
anyhow = "1"
toml = "0.8"
