[package]
name = "cyberretrieval-website-governance"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "ALN-governed CHAT stake + website governance types for Eibon-supervised, neurorights-bound websites."
repository = "https://github.com/your-org/Cyconetics"
publish = false

[lib]
name = "cyberretrieval_website_governance"
path = "src/lib.rs"

[features]
default = ["build-aln"]
build-aln = []

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"

# Existing neurorights and envelope crates from your stack
neurorights-core = { path = "../neurorights-core" }
neurorights-firewall = { path = "../neurorights-firewall" }

[build-dependencies]
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
