[package]
name = "cyconetics-decision-grammar"
version = "0.1.0"
edition = "2021"
authors = ["Cyconetics Core Team"]
description = "Immutable decision grammar for autonomous cybernetic upgrades with neuro-consent, RoH guarding, and ecological protection"
license = "MIT"
repository = "https://github.com/Doctor0Evil/Cyconetics"
keywords = ["cybernetics", "BCI", "decision-making", "governance", "blockchain"]
categories = ["encoding", "governance", "cryptography"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }

# For macro expansion (optional; separate crate in production)
# proc-macro2 = "1.0"
# quote = "1.0"
# syn = { version = "2.0", features = ["full"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }

[lib]
name = "cyconetics_decision_grammar"
path = "src/lib.rs"

[[example]]
name = "phoenix_bci_policy"
path = "examples/phoenix_bci_policy.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 0
debug = true

# ALN/Cyberswarm integration
[metadata.aln]
shard_schemas = [
    "cyberswarm.decision.ledger.v1",
    "neurorights.consent.registry.v1",
    "neurorights.broadcast.ledger.v1",
    "policy.governance.decision-grammar.v1",
]

bostrom_chain = "mainnet"

# DID registry for governance identity
[metadata.did]
registry_type = "bostrom"
primary_address = "bostrom18sd2ujv24ual9c9pshtxys6j8knh6xaead9ye7"
alternate_addresses = [
    "bostrom1ldgmtf20d6604a24ztr0jxht7xt7az4jhkmsrc",
]

# Cybernetic governance zones (XR grid)
[metadata.cybernetic_governance]
zones = ["phoenix-west", "phoenix-central", "phoenix-east"]
primary_zone = "phoenix-west"
policy_commitment_hash = "0000000000000000000000000000000000000000000000000000000000000000"
