[package]
name = "phoenix-mar-env-cookbook"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Reuse your existing neurorights + envelope + NexusSample stack
neurorights-core = { path = "../neurorights-core" }
neurorights-firewall = { path = "../neurorights-firewall" }
xr-lab-grid = { path = "../xr-lab-grid" }
