[package]
name = "sessionguard-proxy"
version = "0.1.0"
edition = "2021"
description = "Neurorights-governed SessionGuard HTTP proxy for AI-chat backends (Windows-friendly)"
license = "MIT OR Apache-2.0"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
http = "0.2"
thiserror = "1"
time = { version = "0.3", features = ["formatting", "parsing"] }
